Made web browser zoom out by 75% upon opening the website to solve zoom issue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>YESILYURT & PARTNERS</title>
         <link rel="stylesheet" href="styles.css">
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                // Set the zoom level to 75%
+                document.body.style.zoom = '75%';
+            });
+        </script>
     </head>
     <body>
         <div class="header-hero-wrapper">
